<resources>
    <string name="app_name">moneyflow</string>
    <string name="add">ADD</string>
    <string name="income">รายรับ</string>
    <string name="outcome">รายจ่าย</string>
    <string name="type">ประเภท</string>
    <string name="detail">detail</string>
    <string name="amount">amount</string>
    <string name="amount_Tv">จำนวนเงิน</string>
    <string name="desc_Tv">รายการ</string>
    <string name="save">บันทึก</string>
    <string name="delete">ลบ</string>
</resources>
