<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab09.kmitl.chayanon58070021.moneyflow.UpdateRecordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="52dp"
            android:text="@string/type"
            android:textSize="15sp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radio_Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/income_RBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:button="@android:color/transparent"
                android:checked="true"
                android:paddingBottom="8dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="8dp"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/outcome_RBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:button="@android:color/transparent"
                android:paddingBottom="8dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="8dp"
                android:text="@string/outcome" />


            <!--for hidden circle of radio button-->
            <!--android:button="@android:color/transparent"-->

        </RadioGroup>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_Tv" />

            <EditText
                android:id="@+id/update_desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/amount_Tv" />

            <EditText
                android:id="@+id/update_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/save_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
