<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab09.kmitl.chayanon58070021.moneyflow.AddRecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="52dp"
            android:text="@string/type"
            android:textSize="15sp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/incomeRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:button="@android:color/transparent"
                android:checked="true"
                android:paddingBottom="8dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="8dp"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/outcomeRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:button="@android:color/transparent"
                android:paddingBottom="8dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="8dp"
                android:text="@string/outcome" />


            <!--for hidden circle of radio button-->
            <!--android:button="@android:color/transparent"-->

        </RadioGroup>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_Tv"/>
            <EditText
                android:id="@+id/desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:inputType="text"/>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_Tv"/>
            <EditText
                android:id="@+id/amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:inputType="number"/>

        </LinearLayout>
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/save"/>

    </LinearLayout>




</LinearLayout>
